--- a/MinimoMaximo/style.css
+++ b/MinimoMaximo/style.css
@@ -4,9 +4,10 @@
     align-content: center;
     text-align: center;
     height: auto;
+    margin-left: auto;
+    margin-right: auto;
     width: 80%;
     padding-top: 20px;
-    background-color: aquamarine;
     
 }
 
