--- a/MinimoMaximo/style.css
+++ b/MinimoMaximo/style.css
@@ -1,12 +1,20 @@
+.conteiner {
+
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
 .form{
     display: flex;
     flex-direction: row;
     align-content: center;
     text-align: center;
     height: auto;
-    margin-left: auto;
-    margin-right: auto;
-    width: 80%;
+    width: 100%;
     padding-top: 20px;
     
 }
