--- a/MinimoMaximo/style.css
+++ b/MinimoMaximo/style.css
@@ -60,3 +60,46 @@
     font-size: 20px;
     font-weight: bold;
 }
+
+button {
+
+    font-weight: bold;
+    font-size: 14px;
+    margin: 50px;
+    background-color: white;
+    border: 2px solid #000;
+    border-radius: 8px;
+    height: 30px;
+    width: 80px;
+}
+
+button:hover{
+    background-color: #e9e9e9;
+}
+
+
+table {
+    margin-top: 20px;
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 60px;
+}
+
+table th {
+    background-color: #707070;
+    color: white;
+    height: 30px;
+    padding: 1px 5px;
+    text-align: center;
+    font-size: 20px;
+}
+
+table td {
+    padding: 1px 5px;
+    height: 30px;
+    color: white;
+    background-color: #9C9B9B;
+    text-align: center;
+    font-size: 18px;
+    border-top: solid 1px white;
+}
