--- a/MinimoMaximo/style.css
+++ b/MinimoMaximo/style.css
@@ -70,7 +70,7 @@ button {
     border: 2px solid #000;
     border-radius: 8px;
     height: 30px;
-    width: 80px;
+    width: 20%;
 }
 
 button:hover{
@@ -86,8 +86,8 @@ table {
 }
 
 table th {
-    background-color: #707070;
-    color: white;
+    background-color: #b9b9b9;
+    color: black;
     height: 30px;
     padding: 1px 5px;
     text-align: center;
@@ -97,9 +97,16 @@ table th {
 table td {
     padding: 1px 5px;
     height: 30px;
-    color: white;
-    background-color: #9C9B9B;
+    color: black;
+    background-color: white;
     text-align: center;
     font-size: 18px;
-    border-top: solid 1px white;
+    border-top: solid 1px rgb(0, 0, 0);
+}
+
+.tdimg{
+    
+    width: 15px;
+    height: 15px;
+
 }
